# docker-wslg-gui-template

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: .env.wslg  Dockerfile  docker-compose.yml
docs/i18n/jp/: README.md  readme.md
scripts/: set-wslg.sh
src/: main.py
src/utils/: operator.py
tests/: test_operator.py
