[tool.poetry]
name = "docker-wslg-gui-template"
version = "0.1.0"
description = ""
authors = ["example <example.example@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7 <3.9"
PySimpleGUI = "^4.60.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pysen = { version = "^0.10.2", extras = ["lint"] }
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10.1"

# refference: https://github.com/pfnet/pysen#quickstart-set-up-linters-using-pysen
[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 80
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
paths = ["."]
